Add Screener clearance operations
